--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -27,6 +27,13 @@
             width: 100%;
         }
 
+        // row breaks
+        .fontsampler-interface-row-break {
+            clear: both;
+            height: 1px;
+            width: 100%;
+        }
+
         // different column layouts; define all
         // .fontsampler-ui-blocks accordingly via mixin
         &.columns-1 {
