--- a/css/fontsampler-custom-selectric.css
+++ b/css/fontsampler-custom-selectric.css
@@ -140,8 +140,8 @@
   padding: 0;
   margin: 0;
   font-size: 12px;
-  line-height: 20px;
-  min-height: 20px;
+  line-height: 1em;
+  min-height: 1em;
 }
 .selectric-items li {
   display: block;
@@ -185,4 +185,14 @@
 }
 .selectric-items .selectric-group li {
   padding-left: 25px;
+}
+.selectric-wrapper {
+  height: 100%;
+}
+.selectric-wrapper .selectric {
+  height: 100%;
+}
+.selectric-wrapper .selectric .label,
+.selectric-wrapper .selectric .button {
+  height: 100%;
 }
