added text default alignment as settings option, fixes #59

--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -61,4 +61,15 @@
             }
         }
     }
+
+    .fontsampler-admin-alignment-icon {
+        border: 1px solid #ccc;
+        border-radius: 2px;
+        height: 15px;
+        margin-right: 0.5em;
+        padding: 5px;
+        position: relative;
+        top: 8px;
+        width: 15px;
+    }
 }
