--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -118,6 +118,16 @@
   display: block;
   max-height: 30px;
 }
+#fontsampler-admin .fontsampler-admin-alignment-icon {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  height: 15px;
+  margin-right: 0.5em;
+  padding: 5px;
+  position: relative;
+  top: 8px;
+  width: 15px;
+}
 #fontsampler-admin #fontsampler-fontset-list li select {
   width: 22.25em;
 }
