--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -48,6 +48,7 @@
   color: @labelColor;
   height: @innerHeight;
   border-bottom: 1px solid #333;
+  box-sizing: border-box;
 }
 .selectric .button {
   background: @buttonBgColor;
