minor tweaks to getting box sizing right on different wp themes

--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -21,6 +21,7 @@
   opacity: 0.4;
 }
 .rangeslider__fill {
+  box-sizing: border-box;
   position: absolute;
 }
 .rangeslider--horizontal .rangeslider__fill {
