--- a/css/fontsampler-custom-rangeslider.less
+++ b/css/fontsampler-custom-rangeslider.less
@@ -29,6 +29,7 @@
 
 .rangeslider__fill {
   //background: #333;
+  box-sizing: border-box;
   position: absolute;
 }
 .rangeslider--horizontal .rangeslider__fill {
