--- a/css/fontsampler-custom-selectric.less
+++ b/css/fontsampler-custom-selectric.less
@@ -64,6 +64,7 @@
   height: @buttonSize;
   color: @buttonColor;
   text-align: center;
+  box-sizing: border-box;
   //font: 0/0 a;
   *font: @buttonSize/@buttonSize Lucida Sans Unicode, Arial Unicode MS, Arial;
 }
