--- a/css/fontsampler-custom-selectric.css
+++ b/css/fontsampler-custom-selectric.css
@@ -41,6 +41,7 @@
   height: 30px;
   color: #333333;
   text-align: center;
+  box-sizing: border-box;
   *font: 1px Lucida Sans Unicode, Arial Unicode MS, Arial;
 }
 .selectric .button:after {
