--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -142,13 +142,75 @@
   display: inline-block;
   width: 24em;
 }
+#fontsampler-admin header {
+  background: white;
+  margin: 0 1.5em 0 0;
+  padding: 1em 1em;
+}
+#fontsampler-admin #fontsampler-menu ul {
+  border-bottom: 1px solid #222222;
+  margin: 0;
+  padding: 0 1em;
+}
+#fontsampler-admin #fontsampler-menu ul li {
+  padding: 0;
+  margin: 0;
+  font-size: larger;
+  display: inline-block;
+  border-bottom: 0;
+  background: #ffffff;
+}
+#fontsampler-admin #fontsampler-menu ul li a {
+  border: 1px solid #fff;
+  border-radius: 0;
+  border-bottom: 0;
+  box-shadow: none;
+  color: #4a4a4a;
+  display: inline-block;
+  font-weight: bold;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  outline: none;
+}
+#fontsampler-admin #fontsampler-menu ul li a:active {
+  background: #ffffff !important;
+  color: #008ec2 !important;
+}
+#fontsampler-admin #fontsampler-menu ul li a:hover,
+#fontsampler-admin #fontsampler-menu ul li a:focus {
+  background: #008ec2;
+  border: 1px solid #006799;
+  border-bottom: 0;
+  color: #fff;
+}
+#fontsampler-admin #fontsampler-menu ul li.current {
+  background: #008ec2;
+}
+#fontsampler-admin #fontsampler-menu ul li.current a {
+  border: 1px solid #008ec2;
+  border-bottom: 0;
+  color: #ffffff;
+}
+#fontsampler-admin .button {
+  border-radius: 0;
+  box-shadow: none;
+  font-weight: bold;
+  text-shadow: none;
+}
+#fontsampler-admin .button.button-primary {
+  background: #64caf0;
+  color: #222222;
+}
+#fontsampler-admin .button.delete {
+  background: #e5604e;
+  color: #ffffff;
+}
 /*
  * Scope all css to be contained only within the fontsampler wrapper
  */
 #fontsampler-admin {
   padding-top: 1em;
 }
-#fontsampler-admin header,
 #fontsampler-admin main {
   background: white;
   margin: 0 1.5em 0 0;
@@ -320,45 +382,6 @@
 #fontsampler-admin ul.real-list {
   list-style: disc;
   margin: 0 0 0 2em;
-}
-#fontsampler-admin #fontsampler-menu ul {
-  border-bottom: 1px solid #999;
-  margin: 0;
-  padding: 0 1em;
-}
-#fontsampler-admin #fontsampler-menu ul li {
-  padding: 0;
-  margin: 0;
-  font-size: larger;
-  display: inline-block;
-  border-bottom: 0;
-}
-#fontsampler-admin #fontsampler-menu ul li a {
-  border: 1px solid #fff;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  border-bottom: 0;
-  display: inline-block;
-  padding: 0.5em 1em;
-  text-decoration: none;
-  outline: none;
-}
-#fontsampler-admin #fontsampler-menu ul li a:hover,
-#fontsampler-admin #fontsampler-menu ul li a:focus {
-  background: #008ec2;
-  border: 1px solid #006799;
-  border-bottom: 0;
-  color: #fff;
-}
-#fontsampler-admin #fontsampler-menu ul li.current {
-  background: #fafafa;
-}
-#fontsampler-admin #fontsampler-menu ul li.current a {
-  border: 1px solid #999;
-  border-bottom: 0;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  color: #333;
 }
 #fontsampler-admin .fontsampler-admin-placeholders {
   display: none;
